# OrderBookEngine

./: CMakeLists.txt  README.md
docs/: project_plan.md
include/ob/book/: order_book.hpp  order_node.hpp  price_level.hpp
include/ob/types/: order.hpp  order_id.hpp  price.hpp  quantity.hpp  side.hpp  trade.hpp
include/ob/util/: logger.hpp
src/: main.cpp
src/book/: order_book.cpp
src/util/: logger.cpp
tests/: CMakeLists.txt  test_smoke.cpp
